[tool.poetry]
name = "test-package"
version = "0.1.0"
description = ""
authors = ["ZakCannon <Zak.Cannon@softwire.com>"]
readme = "README.md"
packages = [{include = "test_package"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
